Update about me

--- a/index.html
+++ b/index.html
@@ -37,18 +37,18 @@
         <div class="container clearfix">                       
             <img class="profile-image img-fluid float-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content float-left">
-                <h1 class="name">James Lee</h1>
-                <h2 class="desc">Web App Developer</h2>   
+                <h1 class="name">Alan Nguyen</h1>
+                <h2 class="desc">Web Developer | Software Engineer</h2>   
                 <ul class="social list-inline">
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>                   
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-github-alt"></i></a></li>    
-                    <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>   
-                    <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                
+                    <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-twitter"></i></a></li>              
+                    <li class="list-inline-item"><a href="#"><i class="fab fa-google-plus-g"></i></a></li> -->
+                    <li class="list-inline-item"><a href="https://www.linkedin.com/in/alan-nguyen-oh/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/alan-nguyen" target="_blank"><i class="fab fa-github-alt"></i></a></li>    
+                    <!-- <li class="list-inline-item"><a href="#"><i class="fab fa-stack-overflow"></i></a></li>   
+                    <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                 -->
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="https://themes.3rdwavemedia.com/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary float-right" href="https://www.linkedin.com/in/alan-nguyen-oh/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
         </div><!--//container-->
     </header><!--//header-->
     
@@ -59,7 +59,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>Write a brief intro about yourself. It's a good idea to include your personal interests and hobbies as well. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec. Commodo ligula eget dolor. Aenean massa.</p>
+                            <p>I am passionate about the web, its reach, and how to create amazing experiences delivered in sub-second speeds. I thrive on improving user experiences, generating and analyzing meaningful data, and attacking scaling problems.</p>
+
+                            <p>I am excited to hear about junior and mid-level open positions on web developer teams, as well as front-end developer positions on teams or with startups.</p>
                          
                         </div><!--//content-->
                     </div><!--//section-inner-->                 
