--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <li class="list-inline-item last-item"><a href="#"><i class="fab fa-codepen"></i></a></li>                 -->
                 </ul> 
             </div><!--//profile-->
-            <a class="btn btn-cta-primary float-right" href="https://www.linkedin.com/in/alan-nguyen-oh/" target="_blank"><i class="fas fa-paper-plane"></i> Contact Me</a>              
+            <a class="btn btn-cta-primary float-right" href="mailto:tnn@ualberta.ca"><i class="fas fa-paper-plane"></i> Contact Me</a>              
         </div><!--//container-->
     </header><!--//header-->
     
@@ -218,9 +218,9 @@
                         <h2 class="heading sr-only">Basic Information</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>San Francisco, US</li>
-                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="#">jameslee@website.com</a></li>
-                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="#">https://www.website.com</a></li>
+                                <li><i class="fas fa-map-marker-alt"></i><span class="sr-only">Location:</span>Edmonton, AB, Canada</li>
+                                <li><i class="fas fa-envelope"></i><span class="sr-only">Email:</span><a href="mailto:tnn@ualberta.ca">tnn@ualberta.ca</a></li>
+                                <li><i class="fas fa-link"></i><span class="sr-only">Website:</span><a href="http://alanng.tech" target="_blank">http://alanng.tech</a></li>
                             </ul>
                         </div><!--//content-->  
                     </div><!--//section-inner-->                 
