--- a/index.html
+++ b/index.html
@@ -279,12 +279,12 @@
                         <div class="content">
                             <div class="item">
                                 <blockquote class="quote">                                  
-                                    <p><i class="fas fa-quote-left"></i>James is an excellent software engineer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
+                                    <p><i class="fas fa-quote-left"></i>Alan is an excellent web developer and he is passionate about what he does. You can totally count on him to deliver your projects!</p>
                                 </blockquote>                
-                                <p class="source"><span class="name">Tim Adams</span><br /><span class="title">Curabitur commodo</span></p>                                                             
+                                <p class="source"><span class="name">John Smith</span><br /><span class="title">Google</span></p>                                                             
                             </div><!--//item-->
                             
-                            <p><a class="more-link" href="#"><i class="fas fa-external-link-alt"></i>More on Linkedin</a></p> 
+                            <p><a class="more-link" href="https://www.linkedin.com/in/alan-nguyen-oh/" target="_blank"><i class="fas fa-external-link-alt"></i>More on Linkedin</a></p> 
                             
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -295,12 +295,23 @@
                         <h2 class="heading">Education</h2>
                         <div class="content">
                             <div class="item">                      
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> MSc Computer Science</h3>
-                                <h4 class="university">University College London <span class="year">(2011-2012)</span></h4>
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i>Full-stack Developer</h3>
+                                <h4 class="university">FreeCodeCamp <span class="year">(2018 - present)</span></h4>
                             </div><!--//item-->
+
+                            <div class="item">                      
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> .Net Developer</h3>
+                                <h4 class="university">ComIT <span class="year">(Jan - Apr 2020)</span></h4>
+                            </div><!--//item-->
+
+                            <div class="item">                      
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> M.Sc. IPG</h3>
+                                <h4 class="university">University Of Alberta <span class="year">(2018-2019)</span></h4>
+                            </div><!--//item-->
+
                             <div class="item">
-                                <h3 class="title"><i class="fas fa-graduation-cap"></i> BSc Computer Science</h3>
-                                <h4 class="university">University of Bristol <span class="year">(2008-2011)</span></h4>
+                                <h3 class="title"><i class="fas fa-graduation-cap"></i> B.Sc. Geophysics</h3>
+                                <h4 class="university">Hanoi University of Mining and Geology <span class="year">(2008-2013)</span></h4>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
