Hide music section

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </aside><!--//section-->
-                
+<!--   Music section              
                 <aside class="list music aside section">
                     <div class="section-inner">
                         <h2 class="heading">Favourite coding music</h2>
@@ -359,9 +359,9 @@
                                 <li><i class="fas fa-headphones"></i> <a href="#">Etiam hendrerit urna nunc</a></li>
                                 <li><i class="fas fa-headphones"></i> <a href="#">Duis et felis bibendum</a></li>
                             </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
+                        </div> 
+                    </div>
+                </aside> -->
                 
                 <aside class="list conferences aside section">
                     <div class="section-inner">
