Hide conference section

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                         </div> 
                     </div>
                 </aside> -->
-                
+<!--    Conference section             
                 <aside class="list conferences aside section">
                     <div class="section-inner">
                         <h2 class="heading">Conferences</h2>
@@ -371,9 +371,9 @@
                                 <li><i class="far fa-calendar-alt"></i> <a href="#" target="_blank">WWDC 2020</a> (San Francisco)</li>
                                 <li><i class="far fa-calendar-alt"></i> <a href="#">Hive</a> (Seattle)</li>
                             </ul>
-                        </div><!--//content-->
-                    </div><!--//section-inner-->
-                </aside><!--//section-->
+                        </div>
+                    </div>
+                </aside> -->
                 
                 <aside class="credits aside section">
                     <div class="section-inner">
